fix horizontal scroll

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,29 +1,9 @@
 .cover__link {
-  min-height: 740px;
+  width: 100%;
+  aspect-ratio: 16/10;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-decoration: none;
 }
-
-@media screen and (max-width: 1184px) {
-    .cover__link {
-      min-width: 1024px;
-      min-height: 640px;
-    }
-  }
-  
-  @media screen and (max-width: 1023px) {
-    .cover__link {
-      min-width: 768px;
-      min-height: 480px;
-    }
-  }
-  
-  @media screen and (max-width: 767px) {
-    .cover__link {
-      min-width: 320px;
-      min-height: 200px;
-    }
-  }
