--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,7 +6,7 @@
   margin: 92px auto 0 auto;
 }
 
-@media screen and (max-width: 1184px) {
+@media screen and (max-width: 1200px) {
   .photo-grid {
     grid-template-columns: repeat(3, minmax(284px, 352px));
     gap: 14px;
